css/ebi-global.css
/* ... */
h5 {
  font-weight: 400; }

a,
a:visited {
  border-bottom-width: 1px;
  border-bottom-style: dotted;
  border-bottom-color: inherit; }

a.active,
a:hover,
a:active {
  border-bottom-style: solid; }

a.special {
  font-style: italic;
  border-bottom-style: double;
  border-bottom-width: 3px;
  padding: 0.1em 0.3em; }

a:focus {
  box-shadow: 0 0 2px rgba(100, 100, 100, 0.5); }

a:hover {
  opacity: .9; }

a.image,
a.image:visited {
  border-bottom: 0 none; }

a.button, a.button:visited {
  color: #f8f8f8;
  white-space: nowrap; }

/* accomodate legend.label */
legend.label {
  display: block; }

/* Secondary menu */
ul.menu.secondary-menu,
.secondary-menu ul.menu {
  padding-bottom: 1rem; }
  ul.menu.secondary-menu a, ul.menu.secondary-menu a:hover,
  .secondary-menu ul.menu a,
  .secondary-menu ul.menu a:hover {
    border-bottom: none; }
  ul.menu.secondary-menu li,
  .secondary-menu ul.menu li {
    display: inline-block; }

.callout.tiny {
  padding: 0rem; }

.breadcrumbs {
  padding-top: 0.5rem; }

body .breadcrumbs a {
  color: #777;
  border-bottom: none; }

/* Custom styling for different local masthead */
#local-title.logo-only img,
#local-title.logo-title img,
#local-title.logo-title-strapline img {
  float: left;
  margin: 1em 0.69em 0.69em; }

#local-title.logo-title span,
#local-title.logo-title-strapline span {
  display: block;
  margin: 1em 0 0.69em 0;
  float: left; }

#local-title.logo-title span {
  margin-top: 2.3em; }

#local-title.logo-title h1,
#local-title.logo-title-strapline h1 {
  display: inline;
  line-height: 100%; }

#local-title.logo-title-strapline h1 {
  font-size: 270%; }

#local-title.logo-title-strapline p {
  display: inline;
  font-size: 123.1%; }

/* Compact vertical menu trees */
ul.simple.vertical.menu {
  margin-left: 0;
  font-size: .9rem; }
  ul.simple.vertical.menu li {
    margin-bottom: .5rem;
    display: block; }
    ul.simple.vertical.menu li > a {
      display: inline;
      padding: 0; }
    ul.simple.vertical.menu li > a.active:before {
      content: "9 ";
      font-family: 'EBI-Functional'; }
    ul.simple.vertical.menu li > ul.simple.menu {
      margin: 0.5rem; }

.cookie-banner {
  position: fixed;
  background-color: #222;
  width: 100%;
  padding: 1rem;
  left: 0;
  bottom: 0;
  color: #eee; }
  .cookie-banner a, .cookie-banner a:hover {
    color: #f8f8f8; }
  .cookie-banner .text {
    margin-right: 2em; }

body .thumbnail {
  box-shadow: none; }

.caption {
  line-height: 1.4em;
  font-size: .9rem;
  opacity: .8;
  overflow: hidden; }

figure.image {
  display: table;
  width: 1px;
  padding-left: .5rem; }
  figure.image img, figure.image figcaption {
    max-width: inherit; }
  figure.image figcaption {
    margin: .75rem 0;
    line-height: 1.4em;
    font-family: sans-serif;
    font-size: .9rem;
    opacity: .8;
    overflow: hidden;
    display: table-row; }
  .columns > div.cke_widget_image:first-child > figure.image,
  .columns > div.cke_widget_image:first-child > figure.image img,
  .columns > figure.image:first-child,
  .columns > figure.image:first-child img {
    max-width: 100%;
    width: auto;
    display: block; }

a.highlight-caption,
.highlight-caption {
  z-index: 1;
  position: relative;
  top: -3rem;
  color: #fff;
  padding: .25rem .5rem;
  background: #333;
  border-bottom: none; }

.highlight-caption.highlight-caption-big {
  top: -8rem;
  display: inline-block;
  margin-bottom: -5rem; }

.position-relative > .highlight-caption.highlight-caption-big {
  position: absolute;
  top: auto;
  bottom: 3%;
  margin-bottom: 0; }

body .has-tip {
  font-weight: normal;
  line-height: 1em;
  background: rgba(0, 0, 0, 0.03); }

/* Float left for pullquotes */
blockquote.float-left {
  border-left: none;
  text-align: right;
  border-right: 1px solid #cacaca;
  margin-right: 1rem; }

blockquote.lead {
  margin-left: 1rem;
  border-left-color: rgba(0, 0, 0, 0);
  border-right-color: rgba(0, 0, 0, 0); }

blockquote.lead.quote:before {
  content: "“";
  position: relative;
  top: -1.5rem;
  left: -1.5rem;
  font-size: 3rem;
  display: block;
  height: 0px; }

/* bigger first line for some blockquotes */
blockquote.drop-quote::first-line {
  font-size: 1.6rem; }

@media screen and (max-width: 75rem) {
  body ul.dropdown.menu.float-left {
    padding-left: .5rem; }
  body h1 {
    font-size: 2.5rem; }
  body h2 {
    font-size: 2rem; }
  body h3 {
    font-size: 1.5rem; }
  body h4 {
    font-size: 1.25rem; } }

nav.orbit-bullets button.thumbnail {
  width: auto;
  border-radius: 0; }

nav.orbit-bullets button.thumbnail.is-active {
  box-shadow: 0 0 1px  #444; }

nav.orbit-bullets button.thumbnail.image {
  width: 4rem;
  height: 3rem;
  overflow: hidden; }

nav.orbit-bullets button.thumbnail.image > img {
  min-width: 6rem;
  margin-left: -2rem; }

.columns.no-pad-right {
  padding-right: 0; }

.columns.no-pad-left {
  padding-left: 0; }

.button:focus,
.button:hover,
.button.hover {
  opacity: .8; }

.tabs-title > a {
  border-bottom: none; }

.tabs-title > a:hover {
  background-color: #007c82;
  color: white; }

.tabs-title > a:focus, .tabs-title > a[aria-selected='true'] {
  color: white;
  background: #555; }

.button-grid a.button.columns {
  margin-bottom: 1px;
  border: 0;
  border-right: 1px solid #fff; }

.intro-unit {
  padding-top: 3rem;
  padding-bottom: 2rem; }
  .intro-unit h2 {
    font-size: 3rem;
    margin-bottom: 0; }
  .intro-unit h3 {
    padding-bottom: 1rem; }
  .intro-unit .lead {
    color: #555;
    margin-bottom: .5rem; }

a.external:after {
  content: " x";
  font-family: "EBI-Generic";
  font-size: .65rem;
  position: relative;
  top: -1px;
  margin-left: .4rem; }

a.read-more,
a.readmore,
a.more {
  white-space: nowrap; }
  a.read-more:after,
  a.readmore:after,
  a.more:after {
    content: " >";
    font-family: "EBI-Functional";
    font-size: .85em; }

@media screen and (min-width: 40em) {
  body.full-width .row,
  body.full-width .row .row {
    max-width: 150rem; } }
/* ... */

